styling changes, personalization and screenshot

--- a/index.html
+++ b/index.html
@@ -24,39 +24,34 @@
         </div>
         <div class="bookmark-container">
             <div class="bookmark-set">
-                <div class="bookmark-title">Daily</div>
+                <div class="bookmark-title">Work</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://inbox.google.com/" target="_blank">Inbox</a>
-                    <a class="bookmark" href="https://github.com/" target="_blank">Github</a>
-                    <a class="bookmark" href="https://drive.google.com/" target="_blank">Drive</a>
+                  <a class="bookmark" href="https://mail.google.com/" target="_blank">Inbox</a>
+                  <a class="bookmark" href="https://github.com/avronr" target="_blank">Github</a>
+                  <a class="bookmark" href="https://gitlab.com/avronr" target="_blank">Gitlab</a>		  
+                  <a class="bookmark" href="https://drive.google.com/" target="_blank">Drive</a>
                 </div>
             </div>
             <div class="bookmark-set">
                 <div class="bookmark-title">Media</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://youtube.com" target="_blank">Youtube</a>
-                    <a class="bookmark" href="https://netflix.com" target="_blank">Netflix</a>
-                    <a class="bookmark" href="https://crunchyroll.com" target="_blank">Crunchyroll</a>
-                    <a class="bookmark" href="https://" target="_blank">Amazon Prime</a>
+                  <a class="bookmark" href="https://youtube.com" target="_blank">Youtube</a>
+                  <a class="bookmark" href="https://crunchyroll.com" target="_blank">Crunchyroll</a>
+                  <a class="bookmark" href=" https://www2.9anime.to/" target="_blank">9anime
                 </div>
             </div>
             <div class="bookmark-set">
             <div class="bookmark-title">Reddit</div>
-                <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://reddit.com/r/overwatch" target="_blank">/r/overwatch</a>
-                    <a class="bookmark" href="https://reddit.com/r/pcmasterrace" target="_blank">/r/pcmasterrace</a>
-                    <a class="bookmark" href="https://reddit.com/r/me_irl" target="_blank">/r/me_irl</a>
-                    <a class="bookmark" href="https://reddit.com/r/battlestations" target="_blank">/r/battlestations</a>
-                    <a class="bookmark" href="https://reddit.com/r/unixporn" target="_blank">/r/unixporn</a>
-                    
-                    <a class="bookmark" href="https://reddit.com/r/news" target="_blank">/r/news</a>
+            <div class="bookmark-inner-container">
+              <a class="bookmark" href="https://www.reddit.com/r/unixporn" target="_blank">/r/unixporn</a>
+              <a class="bookmark" href="https://www.reddit.com/r/freesoftware/" target="_blank">/r/freesoftware</a>
+              <a class="bookmark" href="https://reddit.com/r/news" target="_blank">/r/news</a>
                 </div>
             </div>
             <div class="bookmark-set">
                 <div class="bookmark-title">Social</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://twitter.com" target="_blank">Twitter</a>
-                    <a class="bookmark" href="https://facebook.com" target="_blank">Facebook</a>
+                  <a class="bookmark"https://twitter.com/abraham__raji" target="_blank">Twitter</a>
                 </div>
             </div>
         </div>
